Fixed: links and text-decoration

--- a/Labs/index.html
+++ b/Labs/index.html
@@ -12,9 +12,9 @@
 <body>
 	<header>
 		<nav>
-			<a class="nav__item">Все курсы</a>
-			<a class="nav__item">Отзывы</a>
-			<a class="nav__item">Контакты</a>
+			<a class="nav__item" href="#" target="_blank">Все курсы</a>
+			<a class="nav__item" href="#" target="_blank">Отзывы</a>
+			<a class="nav__item" href="#" target="_blank">Контакты</a>
 			<button class='nav__item'><img src="img/Бургер.png" alt="Бургер"></button>
 		</nav>
 	</header>
@@ -34,10 +34,10 @@
 		</section>
 		<section class="courses">
 			<div class="courses__row">
-				<button type="submit"><img src="img/c.png" alt="C# Course"></button>
-				<button type="submit"><img src="img/c++.png" alt="C++Course"></button>
-				<button type="submit"><img src="img/python.png" alt="Python Course"></button>
-				<button type="submit"><img src="img/java.png" alt="Java Course"></button>
+				<a href="#"><img src="img/c.png" alt="C# Course"></a>
+				<a href="#"><img src="img/c++.png" alt="C++Course"></a>
+				<a href="#"><img src="img/python.png" alt="Python Course"></a>
+				<a href="#"><img src="img/java.png" alt="Java Course"></a>
 			</div>
 		</section>
 	</main>
