Implemented: Scripts, table.

--- a/Labs/index.html
+++ b/Labs/index.html
@@ -4,6 +4,7 @@
 	<title>Lab1 C# INFO</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
+	<script src="js/script.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
 			<a class="nav__item" href="#" target="_blank">Все курсы</a>
 			<a class="nav__item" href="#" target="_blank">Отзывы</a>
 			<a class="nav__item" href="#" target="_blank">Контакты</a>
-			<button class='nav__item'><img src="img/Бургер.png" alt="Бургер"></button>
+			<button class="nav__item" id="login__button"><img src="img/login.png" alt="Login"></button>
 		</nav>
 	</header>
 	<main>
@@ -49,6 +50,53 @@
 			<a href="#" target="_blank"><img src="img/twitter.png" alt="Twitter" title="Ссылка на Twitter"></a>
 			<a href="#" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Ссылка на YouTube"></a>
 		</div>
+		<h2 class="page-box-content-title">Таблица на гридах по ТЗ</h2>
+		<section class="table-container" id="table-container">
+			<table>
+				<thead>
+				<tr>
+					<th>Таблица</th>
+					<th>Для</th>
+					<th>Лабораторной</th>
+					<th>Работы</th>
+					<th>№3</th>
+				</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>2</td>
+						<td>3</td>
+						<td>4</td>
+						<td>5</td>
+					</tr>
+					<tr>
+						<td>1</td>
+						<td>1</td>
+						<td>1</td>
+						<td>1</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>2</td>
+						<td>2</td>
+						<td>2</td>
+						<td>2</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>3</td>
+						<td>3</td>
+						<td>3</td>
+						<td>3</td>
+					</tr>
+				</tbody>
+			</table>
+		</section>
+		<section>
+			<div class="load__data" id="load__stat"></div>
+		</section>
 	</footer>
 </body>
 </html>
