--- a/LoginPage/index.html
+++ b/LoginPage/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="js/script.js"></script>
+    <script src="../Labs/js/script.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
     <title>Login | Page</title>
 </head>
 <body>
