--- a/Labs/index.html
+++ b/Labs/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
     <nav>
-        <a class="nav__item" href="#" target="_blank">Все курсы</a>
+        <a class="nav__item" href="../CoursesPage/index.html" target="_parent">Все курсы</a>
         <a class="nav__item" href="#" target="_blank">Отзывы</a>
         <a class="nav__item" href="#" target="_blank">Контакты</a>
         <button class="nav__item" id="login__button"><img src="img/login.png" alt="Login"></button>
