Implemented: fetch requests in comments

--- a/Reviews/index.html
+++ b/Reviews/index.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
 <main>
-  <ul class="comments">
+  <ul class="comments" id="comments">
   </ul>
   <template id="commentItem">
     <li class="comment__item">
