Implemented: fetch requests in comments

--- a/Reviews/index.html
+++ b/Reviews/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../LoginPage/js/script.js"></script>
   <script defer src="../CoursesPage/js/location.js"></script>
-  <script src="../Reviews/js/comment.js"></script>
+  <script defer src="../Reviews/js/comment.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
