Implemented: fetch requests in comments

--- a/Reviews/index.html
+++ b/Reviews/index.html
@@ -24,6 +24,7 @@
 </header>
 <main>
   <ul class="comments" id="comments">
+    <comment-card name="jhbo;ho;hn" email="adfgsdfg" body="sdghsdfgsfdcg"></comment-card>
   </ul>
   <template id="commentItem">
     <li class="comment__item">
