Implemented: fixed _blank

--- a/CoursesPage/index.html
+++ b/CoursesPage/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Courses Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../LoginPage/js/script.js"></script>
     <script src="../CoursesPage/js/location.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,8 +16,8 @@
         <a class="nav__item" id="main_page" href="../Labs/index.html" target="_parent">Главная страница</a>
         <a class="nav__item" id="all_courses" href="../CoursesPage/index.html" target="_parent">Все курсы</a>
         <a class="nav__item" id="reviews" href="../Reviews/index.html" target="_parent">Отзывы</a>
-        <a class="nav__item" id="contacts" href="#" target="_blank">Контакты</a>
-        <button class="nav__item" id="login__button"><img src="img/login.png" alt="Login"></button>
+        <a class="nav__item" id="contacts" href="#" target="_parent">Контакты</a>
+        <a class="nav__item" id="login__button" href="../LoginPage/index.html" target="_parent"><img src="img/login.png" alt="Login"></a>
     </nav>
 </header>
 <main>
