--- a/Labs/index.html
+++ b/Labs/index.html
@@ -16,7 +16,7 @@
     <nav>
         <a class="nav__item" id="main_page" href="../Labs/index.html" target="_parent">Главная страница</a>
         <a class="nav__item" id="all_courses" href="../CoursesPage/index.html" target="_parent">Все курсы</a>
-        <a class="nav__item" id="reviews" href="../Reviews/index.html" target="_blank">Отзывы</a>
+        <a class="nav__item" id="reviews" href="../Reviews/index.html" target="_parent">Отзывы</a>
         <a class="nav__item" id="contacts" href="#" target="_parent">Контакты</a>
         <a class="nav__item" id="login__button" href="../LoginPage/index.html" target="_parent"><img src="img/login.png" alt="Login"></a>
     </nav>
