--- a/Reviews/index.html
+++ b/Reviews/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script defer src="../CoursesPage/js/location.js"></script>
   <script defer src="../Reviews/js/comment.js"></script>
+  <link rel="stylesheet" href="../Reviews/css/spinner.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,11 +18,15 @@
     <a class="nav__item" id="main_page" href="../Labs/index.html" target="_parent">Главная страница</a>
     <a class="nav__item" id="all_courses" href="../CoursesPage/index.html" target="_parent">Все курсы</a>
     <a class="nav__item" id="reviews" href="../Reviews/index.html" target="_parent">Отзывы</a>
-    <a class="nav__item" id="contacts" href="#" target="_parent">Контакты</a>
+    <a class="nav__item" id="contacts" href="../Contacts/index.html" target="_parent">Контакты</a>
     <a class="nav__item" id="login__button" href="../LoginPage/index.html" target="_parent"><img src="img/login.png" alt="Login"></a>
   </nav>
 </header>
 <main>
+  <div class="spin-wrapper" id="spin-wrapper">
+    <div class="spinner">
+    </div>
+  </div>
   <ul class="comments" id="comments">
     <comment-card name="jhbo;ho;hn" email="adfgsdfg" body="sdghsdfgsfdcg"></comment-card>
   </ul>
